--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,7 +7,6 @@
         convertWarningsToExceptions="true"
         processIsolation="false"
         stopOnFailure="false"
-        syntaxCheck="false"
         verbose="true"
         >
     <testsuites>
@@ -21,6 +20,6 @@
         </whitelist>
     </filter>
     <logging>
-        <log type="coverage-html" target="./coverage" charset="UTF-8" hightlight="true" />
+        <log type="coverage-html" target="./coverage" />
     </logging>
 </phpunit>
